# dstack

./: .env  .gitignore  .gitmodules  .justfile  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  Security.md  black.toml  common.py  container_duration.py  ddp.py  docker_metrics.py  dstack_run_plan.py  endpoint-agent-backend-troubleshooting.md  endpoint-agent-checkpoints.md  endpoint-agent-harness-test-plan.md  endpoint-e2e-testing-report.md  endpoint-implementation-plan.md  justfile  main.py  metrics_for_cpu_memory&GPUutilization.py  mkdocs.yml  pyconfig.toml  pyproject.toml  pytest.ini  python.py  qwen-endpoint-happy.dstack.yml  requirements_dev.txt  requirements_doc.txt  ruff.toml  setup.py  workflow.yaml
.dstack/: providers.yaml  templates.yaml  workflows.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  feature_request.yaml
.github/workflows/: build-artifacts.yml  build-docs.yml  build.yml  close-inactive-issues.yml  docker-amd-smi.yml  docker-dind.yml  docker-efa.yml  docker-tt-smi.yml  docker.yml  docker_mkdir.yml  docs.yaml  gcp-a3mega-image.yml  integration_tests.yml  manual-hub-docker.yml  manual-server-docker.yml  manual_ami_stgn.yml  manual_azure_stgn.yml  manual_gcp_image_release.yml  manual_gcp_image_stgn.yml  publish_azure_image.yml  release.yml  site.yaml  upload-post-pypi-artifacts.yml  upload-pre-pypi-artifacts.yml  vm-images.yml
.test-configs/endpoint-agent/: endpoint-dev-runpod-fleet.dstack.yml  qwen-endpoint-happy.dstack.yml  qwen-endpoint-log-smoke.dstack.yml
.test-configs/endpoint-lifecycle/: no-preset-reapply.dstack.yml
cli/: requirements.txt  requirements_dev.txt  setup.py
cli/dstack/: __init__.py  backend.py  config.py  jobs.py  logger.py  random_name.py  repo.py  runners.py  util.py  version.py
cli/tests/: test_config.py  test_logger.py
contributing/: ARCHITECTURE.md  AUTOSCALING.md  BACKENDS.md  DEVELOPMENT.md  DOCS.md  DOCUMENTATION.md  FRONTEND.md  GATEWAY.md  GPUHUNT.md  LOCKING.md  METRICS.md  MIGRATIONS.md  PIPELINES.md  PROXY.md  RELEASE.md  RUNNER-AND-SHIM.md  RUNS-AND-JOBS.md
dashboard/: .gitlab-ci.yml  TODO.md  build.gradle.kts  package.json  tsconfig.json
dashboard/public/: index.html  manifest.json
dashboard/src/: index.tsx  routes.ts  store.ts
docs/: CNAME  aws.md  backends.md  community.md  concepts.md  custom-providers.md  define-workflows.md  developers.md  docker.md  examples.md  faq.md  gpt-2.md  index.md  installation.md  learn.md  llms.txt  on-demand-runners.md  partners.md  platform.md  playground.md  pricing.md  privacy.md  providers.md  quick-start.md  quickstart.md  robots.txt  run-providers.md  run-workflows.md  runners.md  self-hosted-runners.md  setup.md  skill.md  terms.md  troubleshooting.md  usage.md  use-cases.md  what-is-dstack.md  workflows.md
endpoint-implementation-research/: background-loop.md  claude-agent-sdk.md  config-models.md  critique.md  dstack-prototyping-skill-audit.md  dstack-prototyping-skill-outline.md  examples-llm-deployments.md  external-recipes.md  resource-lifecycle-blueprint.md  run-submission-internals.md  service-runtime-health.md  settings-migrations-testing.md  skills-and-pr3856.md  verify-findings.md
examples/: .dstack-task.yml  .dstack.yml  README.md
examples/plugins/example_plugin/: Dockerfile  README.md  enterprise.Dockerfile  pyproject.toml
examples/plugins/example_plugin/src/example_plugin/: __init__.py
examples/plugins/example_plugin_server/: README.md  pyproject.toml
examples/plugins/example_plugin_server/app/: main.py  models.py  utils.py
examples/plugins/example_plugin_server/src/example_plugin_server/: main.py
frontend/: .babelrc  .eslintignore  .eslintrc  .justfile  .prettierrc  README.md  eslint-precommit.config.cjs  eslint-precommit.config.mjs  eslint.config.cjs  eslint.config.mjs  lint-staged.config.cjs  openapi-config.ts  package-lock.json  package.json  staticServer.js  webpack.config.js
gateway/: README.md  pyproject.toml
gateway/src/dstack/: __init__.py
gateway/src/dstack/gateway/: common.py  errors.py  logging.py  main.py  schemas.py
gateway/src/dstack/gateway/auth/: routes.py
gateway/src/dstack/gateway/config/: routes.py  schemas.py
gateway/src/dstack/gateway/core/: auth.py  multi_client.py  nginx.py  persistent.py  store.py  tunnel.py
gateway/src/dstack/gateway/monitoring/: routes.py
gateway/src/dstack/gateway/openai/: models.py  routes.py  schemas.py  store.py
gateway/src/dstack/gateway/openai/clients/: __init__.py  openai.py  tgi.py
gateway/src/dstack/gateway/registry/: routes.py  schemas.py
gateway/src/dstack/gateway/resources/nginx/: entrypoint.jinja2  service.jinja2
gateway/src/dstack/gateway/resources/systemd/: dstack.gateway.service  start.sh  update.sh
gateway/src/dstack/gateway/services/: nginx.py  persistent.py  store.py  tunnel.py
gateway/src/dstack/gateway/stats/: collector.py  routes.py  schemas.py
gateway/src/dstack/gateway/systemd/: __main__.py
gateway/src/dstack/gateway/systemd/resources/: update.sh
gateway/src/tests/core/: test_nginx.py
gateway/src/tests/services/: test_store.py
hub/: .eslintrc  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  staticServer.js
layouts/: custom.yml
mkdocs/: .justfile  index.md  privacy.md  terms.md
packer/: README.MD  build-cuda-image.pkr.hcl  locals.pkr.hcl  nebius.pkr.hcl
providers/: README.md  common.py
runner/: .golangci-lint.yml  .golangci.yml  .justfile  Makefile  README.md  cmd.go  go.mod  go.sum  main.go
scripts/: add_backend.py  aws_image_tools.py  build_frontend.sh  build_hub.sh  merge_kubeconfigs.sh  oci_image_tools.py  publish_azure_image.sh  release_notes.py  release_notes_examples.md  setup_kubernetes.py  sqlite_to_psql.load
src/: requirements.txt  setup.py
src/plugins/rest_plugin/: pyproject.toml
src/plugins/rest_plugin/src/: rest_plugin.py
website/: .gitignore  .justfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+4227 files in other folders)
