[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dstack-gateway"
authors = [
    { name = "dstack GmbH" },
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    # release builds of dstack-gateway depend on a PyPI version of dstack instead
    "dstack[gateway] @ git+https://github.com/dstackai/dstack.git@master",
]

[tool.setuptools.package-data]
"dstack.gateway" = [
    "resources/systemd/*",
]

[tool.setuptools.dynamic]
version = {attr = "dstack.gateway.version.__version__"}
