[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dstack-gateway"
authors = [
    { name = "dstack GmbH" },
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    # release builds of dstack-gateway depend on a PyPI version of dstack instead
    "dstack[gateway] @ https://github.com/dstackai/dstack/archive/refs/heads/master.tar.gz",
]

[project.optional-dependencies]
sglang = ["sglang-router==0.2.1"]

[tool.setuptools.package-data]
"dstack.gateway" = [
    "resources/systemd/*",
]

[tool.setuptools.dynamic]
version = {attr = "dstack.gateway.version.__version__"}
