[project]
name = "example-plugin"
version = "0.1.0"
description = "A dstack plugin example"
readme = "README.md"
authors = [
    { name = "Victor Skvortsov", email = "victor@dstack.ai" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."dstack.plugins"]
example_plugin = "example_plugin:ExamplePlugin"
