[project]
name = "rest-plugin"
version = "0.1.0"
description = "A dstack plugin that enables validation and mutation of run specifications via REST API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
